# constraint-witness

./: README.md  constraint-witness.cabal
crude/ConstraintWitness/: Crude.hs  Internal.hs  Plugin.hs
crude/ConstraintWitness/TH/: Generate.hs
plugin/ConstraintWitness/: Internal.hs  Plugin.hs  Test.hs
plugin/ConstraintWitness/Plugin/: Instances.hs  Witness.hs
plugin/ConstraintWitness/TcPlugin/: Instances.hs  Simple.hs
